Updated look, fixed route flicker, additions
Added order list page, order edit page.

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -359,7 +359,7 @@ body {
   color: #222;
   padding: 0;
   margin: 0;
-  font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+  font-family: "Lato", "Helvetica", Helvetica, Arial, sans-serif;
   font-weight: normal;
   font-style: normal;
   line-height: 1;
@@ -1183,7 +1183,7 @@ select {
       color: #222;
       padding: 1rem;
       display: block;
-      font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+      font-family: "Lato", "Helvetica", Helvetica, Arial, sans-serif;
       font-size: 1rem; }
       .accordion dd > a:hover {
         background: #e3e3e3; }
@@ -1572,7 +1572,7 @@ button, .button {
   border-style: solid;
   border-width: 0px;
   cursor: pointer;
-  font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+  font-family: "Lato", "Helvetica", Helvetica, Arial, sans-serif;
   font-weight: normal;
   line-height: normal;
   margin: 0 0 1.25rem;
@@ -2718,7 +2718,7 @@ label.error {
 
 .label {
   font-weight: normal;
-  font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+  font-family: "Lato", "Helvetica", Helvetica, Arial, sans-serif;
   text-align: center;
   text-decoration: none;
   line-height: 1;
@@ -3142,7 +3142,7 @@ ul.pagination {
     color: #eee;
     font-weight: normal;
     font-size: 1rem;
-    font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; }
+    font-family: "Lato", "Helvetica", Helvetica, Arial, sans-serif; }
   .pricing-table .price {
     background-color: #f6f6f6;
     padding: 0.9375rem 1.25rem;
@@ -3150,7 +3150,7 @@ ul.pagination {
     color: #333;
     font-weight: normal;
     font-size: 2rem;
-    font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; }
+    font-family: "Lato", "Helvetica", Helvetica, Arial, sans-serif; }
   .pricing-table .description {
     background-color: #fff;
     padding: 0.9375rem;
@@ -3378,7 +3378,7 @@ dialog[open] {
   padding: 0.875rem 0;
   list-style-type: none;
   list-style-position: inside;
-  font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; }
+  font-family: "Lato", "Helvetica", Helvetica, Arial, sans-serif; }
   .side-nav li {
     margin: 0 0 0.4375rem 0;
     font-size: 0.875rem; }
@@ -3390,7 +3390,7 @@ dialog[open] {
     .side-nav li.active > a:first-child:not(.button) {
       color: #1ccaff;
       font-weight: normal;
-      font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; }
+      font-family: "Lato", "Helvetica", Helvetica, Arial, sans-serif; }
     .side-nav li.divider {
       border-top: 1px solid;
       height: 0;
@@ -3491,7 +3491,7 @@ dialog[open] {
     display: inline;
     margin-left: 1rem;
     margin-bottom: 0.625rem;
-    font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+    font-family: "Lato", "Helvetica", Helvetica, Arial, sans-serif;
     font-weight: normal;
     font-size: 0.875rem;
     color: #999; }
@@ -3682,7 +3682,7 @@ table {
       background: #efefef;
       color: #222;
       padding: 1rem 2rem;
-      font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+      font-family: "Lato", "Helvetica", Helvetica, Arial, sans-serif;
       font-size: 1rem; }
       .tabs dd > a:hover {
         background: #e1e1e1; }
@@ -3966,7 +3966,7 @@ meta.foundation-mq-topbar {
     color: #fff;
     padding: 12px 0 12px 0;
     padding-left: 15px;
-    font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+    font-family: "Lato", "Helvetica", Helvetica, Arial, sans-serif;
     font-size: 0.8125rem;
     font-weight: normal;
     text-transform: none;
@@ -4413,7 +4413,7 @@ p {
 
 /* Default header styles */
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+  font-family: "Lato", "Helvetica", Helvetica, Arial, sans-serif;
   font-weight: normal;
   font-style: normal;
   color: #222;
@@ -5057,3 +5057,108 @@ th.hide-for-touch {
   display: table-cell !important; }
 
 /* all app scss styles here */
+body {
+  background-color: #DDD;
+  height: 100%; }
+
+.login-panel {
+  width: 500px;
+  margin: auto;
+  height: 100%;
+  background-color: #565656;
+  display: table; }
+  .login-panel .vert-center {
+    display: table-cell;
+    vertical-align: middle; }
+  .login-panel * {
+    color: #FFF; }
+
+.topbar {
+  height: 40px;
+  background-color: #333;
+  margin: 0;
+  width: 100%;
+  padding: 8px 16px; }
+  .topbar .logo {
+    float: left;
+    color: #FFF;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    line-height: 25px; }
+  .topbar .action {
+    float: right;
+    color: #FFF;
+    font-size: 12px;
+    line-height: 25px; }
+
+.button-bar {
+  list-style: none;
+  margin: 0;
+  padding: 0; }
+  .button-bar li {
+    float: right; }
+    .button-bar li a {
+      font-size: 18px;
+      padding: 8px; }
+  .button-bar * {
+    color: #FFF; }
+
+.order-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  position: relative; }
+  .order-list li {
+    position: relative; }
+  .order-list li.item:after {
+    content: " ";
+    position: absolute;
+    width: 8px;
+    top: 0;
+    right: 0;
+    height: 100%; }
+  .order-list li.red.item:after {
+    background-color: #e74c3c; }
+  .order-list li.red.item a:hover * {
+    color: #e74c3c; }
+  .order-list li.blue.item:after {
+    background-color: #3498db; }
+  .order-list li.blue.item a:hover * {
+    color: #3498db; }
+  .order-list li.yellow.item:after {
+    background-color: #f1c40f; }
+  .order-list li.yellow.item a:hover * {
+    color: #f1c40f; }
+  .order-list li.purple.item:after {
+    background-color: #9b59b6; }
+  .order-list li.purple.item a:hover * {
+    color: #9b59b6; }
+  .order-list li.orange.item:after {
+    background-color: #e67e22; }
+  .order-list li.orange.item a:hover * {
+    color: #e67e22; }
+  .order-list li.green.item:after {
+    background-color: #2ecc71; }
+  .order-list li.green.item a:hover * {
+    color: #2ecc71; }
+  .order-list li div.midrow {
+    margin-top: 18px; }
+  .order-list li > div.item {
+    display: block;
+    padding: 8px 24px;
+    background-color: #565656;
+    border-bottom: 1px solid #505050;
+    position: relative; }
+    .order-list li > div.item h4 {
+      font-size: 28px;
+      font-weight: bold;
+      line-height: 18px;
+      float: left; }
+    .order-list li > div.item .date {
+      font-weight: light;
+      font-size: 12px;
+      float: left;
+      line-height: 18px; }
+    .order-list li > div.item h1, .order-list li > div.item h2, .order-list li > div.item h3, .order-list li > div.item h4, .order-list li > div.item .date {
+      color: #FFF; }
